// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`start-case GET /start-case/select-procedure should render the select procedure page with the expected content 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062 - start case</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <fieldset class="govuk-fieldset">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                                    <h1 class="govuk-fieldset__heading"> Appeal procedure</h1>
                                </legend>
                                <div class="govuk-radios" data-module="govuk-radios">
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="appeal-procedure" name="appealProcedure"
                                        type="radio" value="expeditedAppeals">
                                        <label class="govuk-label govuk-radios__label" for="appeal-procedure">Part 1</label>
                                    </div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="appeal-procedure-2" name="appealProcedure"
                                        type="radio" value="written">
                                        <label class="govuk-label govuk-radios__label" for="appeal-procedure-2">Written representations</label>
                                    </div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="appeal-procedure-3" name="appealProcedure"
                                        type="radio" value="hearing">
                                        <label class="govuk-label govuk-radios__label" for="appeal-procedure-3">Hearing</label>
                                    </div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="appeal-procedure-4" name="appealProcedure"
                                        type="radio" value="inquiry">
                                        <label class="govuk-label govuk-radios__label" for="appeal-procedure-4">Inquiry</label>
                                    </div>
                                </div>
                            </fieldset>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`start-case GET /start-case/select-procedure/check-and-confirm should render email previews if it is an enforcement appeal 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Check details and start case</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <dl class="govuk-summary-list">
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Appeal procedure</dt>
                                <dd class="govuk-summary-list__value">Written representations</dd>
                                <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/start-case/select-procedure?editEntrypoint=%2Fappeals-service%2Fappeal-details%2F1%2Fstart-case%2Fselect-procedure"
                                    data-cy="change-appeal-procedure">Change<span class="govuk-visually-hidden"> Appeal procedure</span></a>
                                </dd>
                            </div>
                        </dl>
                        <p class="govuk-body">We’ll start the timetable now and send emails to the relevant parties.</p>
                        <div                         class="govuk-grid-row">
                            <div class="govuk-grid-column-full">
                                <details class="govuk-details" data-cy="preview-email-to-appellant">
                                    <summary class="govuk-details__summary"><span class="govuk-details__summary-text"> Preview email to appellant</span>
                                    </summary>
                                    <div class="govuk-details__text">Rendered HTML for appellant preview</div>
                                </details>
                            </div>
                </div>
                <div class="govuk-grid-row">
                    <div class="govuk-grid-column-full">
                        <details class="govuk-details" data-cy="preview-email-to-lpa">
                            <summary class="govuk-details__summary"><span class="govuk-details__summary-text"> Preview email to LPA</span>
                            </summary>
                            <div class="govuk-details__text">Rendered HTML for LPA preview</div>
                        </details>
                    </div>
                </div>
                <button type="submit" data-prevent-double-click="true" class="govuk-button"
                data-module="govuk-button">Start case</button>
                </form>
            </div>
        </div>
    </div>
    </div>
</main>"
`;

exports[`start-case GET /start-case/select-procedure/check-and-confirm should render the check details and start case page with the expected content if an appeal procedure is found in the session 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Check details and start case</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <dl class="govuk-summary-list">
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Appeal procedure</dt>
                                <dd class="govuk-summary-list__value">Hearing</dd>
                                <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/start-case/select-procedure?editEntrypoint=%2Fappeals-service%2Fappeal-details%2F1%2Fstart-case%2Fselect-procedure"
                                    data-cy="change-appeal-procedure">Change<span class="govuk-visually-hidden"> Appeal procedure</span></a>
                                </dd>
                            </div>
                        </dl>
                        <p class="govuk-body">We’ll start the timetable now and send emails to the relevant parties.</p>
                        <button                         type="submit" data-prevent-double-click="true" class="govuk-button" data-module="govuk-button">Start case</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`start-case POST /start-case/select-procedure should re-render the select procedure page with the expected error message if no radio option was selected 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#appeal-procedure">Select the appeal procedure</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062 - start case</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group govuk-form-group--error">
                            <fieldset class="govuk-fieldset" aria-describedby="appeal-procedure-error">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                                    <h1 class="govuk-fieldset__heading"> Appeal procedure</h1>
                                </legend>
                                <p id="appeal-procedure-error" class="govuk-error-message"><span class="govuk-visually-hidden">Error:</span> Select the appeal procedure</p>
                                <div                                 class="govuk-radios" data-module="govuk-radios">
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="appeal-procedure" name="appealProcedure"
                                        type="radio" value="expeditedAppeals">
                                        <label class="govuk-label govuk-radios__label" for="appeal-procedure">Part 1</label>
                                    </div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="appeal-procedure-2" name="appealProcedure"
                                        type="radio" value="written">
                                        <label class="govuk-label govuk-radios__label" for="appeal-procedure-2">Written representations</label>
                                    </div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="appeal-procedure-3" name="appealProcedure"
                                        type="radio" value="hearing">
                                        <label class="govuk-label govuk-radios__label" for="appeal-procedure-3">Hearing</label>
                                    </div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="appeal-procedure-4" name="appealProcedure"
                                        type="radio" value="inquiry">
                                        <label class="govuk-label govuk-radios__label" for="appeal-procedure-4">Inquiry</label>
                                    </div>
                        </div>
                        </fieldset>
                </div>
                <button type="submit" data-prevent-double-click="true" class="govuk-button"
                data-module="govuk-button">Continue</button>
                </form>
            </div>
        </div>
    </div>
    </div>
</main>"
`;
